--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    height: 100vh;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    background-color: lightcoral;
+    display: flex;
+    flex-direction: column;
+}
