--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,4 @@
 <section class="card">
-    <h1 class="darkred">{{ question }}</h1>
-    <h2>{{ answer }}</h2>
+    <h1 class="darkred">{{ card.indonesian }}</h1>
+    <h2>{{ card.german }}</h2>
 </section>
