--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main>
   <h1>Ruans Flash Cards</h1>
-
   <app-card *ngFor="let card of deck | keyvalue" [card]="card.value"></app-card>
+</main>
 
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
