--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,3 +1,9 @@
+@mixin display($d: flex, $fd: column, $ai: center) {
+  display: $d;
+  flex-direction: $fd;
+  align-items: $ai;
+}
+
 .card {
   box-sizing: border-box;
   padding: 32px;
@@ -6,9 +12,7 @@
   text-align: center;
   background-color: white;
   border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include display();
 }
 
 .darkred {
