--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,19 @@
 main {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+button {
+  box-sizing: border-box;
+  padding: 0;
+  min-width: 40px;
+  min-height: 40px;
+  background-color: white;
+  border: unset;
+  border-radius: 50%;
 }
